BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Help_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object  to store help videos intended to provide users assistance in a variety of functional areas.</description>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the description of a help video.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Video_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the URL link to a help video.</description>
        <label>Link to Video</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sequence_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the sequencing order of a help video.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Help</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description_BMS__c</columns>
        <columns>Link_to_Video_BMS__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Help Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>